--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <header>
         <div class="header_logoItem">
           <div class="header_logoItem_img">
-            <img src="./assets/image/frontlogo.png" alt="" />
+            <img src="frontlogo.png" alt="" />
           </div>
           <nav>
             <ul>
@@ -119,7 +119,7 @@
           <div class="section_WhyHelloFresh_row">
             <div class="section_WhyHelloFresh_row_col">
               <div class="section_WhyHelloFresh_row_col_img">
-                <img src="./assets/image/p2p 1-modified.png" alt="" />
+                <img src="p2p 1-modified.png" alt="" />
               </div>
               <h3>No skippin' meals</h3>
               <p>
@@ -129,7 +129,7 @@
             </div>
             <div class="section_WhyHelloFresh_row_col">
               <div class="section_WhyHelloFresh_row_col_img">
-                <img src="./assets/image/clock2-modified (1).png" alt="" />
+                <img src="clock2-modified (1).png" alt="" />
               </div>
               <h3>Smooth & Easy Services</h3>
               <p>
@@ -139,7 +139,7 @@
             </div>
             <div class="section_WhyHelloFresh_row_col">
               <div class="section_WhyHelloFresh_row_col_img">
-                <img src="./assets/image/ccokbook-modified.png" alt="" />
+                <img src="ccokbook-modified.png" alt="" />
               </div>
               <h3>No Experience Required</h3>
               <p>
@@ -149,7 +149,7 @@
             </div>
             <div class="section_WhyHelloFresh_row_col">
               <div class="section_WhyHelloFresh_row_col_img">
-                <img src="./assets/image/organic-modified.png" alt="" />
+                <img src="organic-modified.png" alt="" />
               </div>
               <h3>Healthy n affordable</h3>
               <p>
@@ -162,7 +162,7 @@
         </section>
         <section class="section_ViewOurPlans">
           <div class="section_ViewOurPlans_img">
-            <img src="./assets/image/planttoplate (1).jpg" alt="" />
+            <img src="planttoplate (1).jpg" alt="" />
           </div>
           <div class="section_ViewOurPlans_title">
             <h2>Why should you choose us?</h2>
