--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         </section>
         <section class="section_HelloFreshPics">
           <h1>#HeavenlyFood #HealthyFamily #HappyLife</h1>
-          <p>Drawing inspiration from Indian mothers who diligently provides for her family while adeptly managing the balancing act of work and home life.</p>
+          <p>Drawing inspiration from Indian mothers who diligently provides for their families while adeptly managing the balancing act of work and home life.</p>
         </section>
         <section class="section_Plans">
           <div class="section_Plans_item">
