--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bon Appetit</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/style/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -30,7 +30,7 @@
       <header>
         <div class="header_logoItem">
           <div class="header_logoItem_img">
-            <img src="frontlogo.png" alt="" />
+            <img src="./assets/image/frontlogo.png" alt="" />
           </div>
           <nav>
             <ul>
@@ -119,7 +119,7 @@
           <div class="section_WhyHelloFresh_row">
             <div class="section_WhyHelloFresh_row_col">
               <div class="section_WhyHelloFresh_row_col_img">
-                <img src="p2p 1-modified.png" alt="" />
+                <img src="./assets/image/p2p 1-modified.png" alt="" />
               </div>
               <h3>No skippin' meals</h3>
               <p>
@@ -129,7 +129,7 @@
             </div>
             <div class="section_WhyHelloFresh_row_col">
               <div class="section_WhyHelloFresh_row_col_img">
-                <img src="clock2-modified (1).png" alt="" />
+                <img src="./assets/image/clock2-modified (1).png" alt="" />
               </div>
               <h3>Smooth & Easy Services</h3>
               <p>
@@ -139,7 +139,7 @@
             </div>
             <div class="section_WhyHelloFresh_row_col">
               <div class="section_WhyHelloFresh_row_col_img">
-                <img src="ccokbook-modified.png" alt="" />
+                <img src="./assets/image/ccokbook-modified.png" alt="" />
               </div>
               <h3>No Experience Required</h3>
               <p>
@@ -149,7 +149,7 @@
             </div>
             <div class="section_WhyHelloFresh_row_col">
               <div class="section_WhyHelloFresh_row_col_img">
-                <img src="organic-modified.png" alt="" />
+                <img src="./assets/image/organic-modified.png" alt="" />
               </div>
               <h3>Healthy n affordable</h3>
               <p>
@@ -162,7 +162,7 @@
         </section>
         <section class="section_ViewOurPlans">
           <div class="section_ViewOurPlans_img">
-            <img src="planttoplate (1).jpg" alt="" />
+            <img src="./assets/image/planttoplate (1).jpg" alt="" />
           </div>
           <div class="section_ViewOurPlans_title">
             <h2>Why should you choose us?</h2>
@@ -228,7 +228,7 @@
         </section>
         <section class="section_HelloFreshPics">
           <h1>#HeavenlyFood #HealthyFamily #HappyLife</h1>
-          <p>Drawing inspiration from Indian mothers who diligently provides for their families while adeptly managing the balancing act of work and home life.</p>
+          <p>Drawing inspiration from Indian mothers who diligently provides for her family while adeptly managing the balancing act of work and home life.</p>
         </section>
         <section class="section_Plans">
           <div class="section_Plans_item">
